2000-08-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-texi-format): Require `ptexinfmt'
	instead of `texinfmt'.
	(dgnushack-install-package): Don't install ptexinfmt.el.
	(dgnushack-make-package): Don't include ptexinfmt.el in MANIFEST.
	(dgnushack-compile): Don't compile dgnushack.el nor ptexinfmt.el.
	(dgnushack-unexported-files, dgnushack-tool-files): New constants.

	* lisp/Makefile.in (install-package): No need to remove
	dgnushack.elc.
	(install): Don't install ptexinfmt.el; no need to remove
	dgnushack.elc.

	* lisp/ptexinfmt.el: New file imported from Wanderlust.

2000-08-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-open-telnet): Wait for the telnet prompt
	before sending a command; allow the rtelnet prompt as well.

	* lisp/message.el (message-make-forward-subject): Remove garbage
	line.

2000-08-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* configure: Regenerate.
	* aclocal.m4 (AC_CHECK_EMACS): Unset `EMACS' environment variable
	if it is `t'.

2000-07-24  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* configure: Regenerate with autoconf v2.14.1.

	* configure.in: Rewrite for using new macros in aclocal.m4.

	* aclocal.m4: (AC_ADD_LOAD_PATH, AC_PATH_PACKAGEDIR,
	AC_CHECK_EMACS, AC_DEFINE_GNUS_PRODUCT_NAME): New macros.
	(AC_PATH_LISPDIR): Set `lispdir' to ".../site-lisp/t-gnus" by
	default.
	(AC_CHECK_EMACS_FLAVOR): Rename from `AC_XEMACS_P'; check for
	`MULE' as well.
	(AM_PATH_LISPDIR): Remove.

	* acinclude.m4: Remove.

	* lisp/dgnushack.el: Don't add "/usr/share/emacs/site-lisp" to
	`load-path'.

	* lisp/gnus-ems.el (gnus-ems-redefine): Defalias
	`gnus-summary-set-display-table' to `(lambda ())' instead of
	`ignore' (don't synch. with Gnus).

2000-07-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Use
	mime-entity-fetch-field instead of mail-header-from.

2000-07-18   Daiki Ueno  <ueno@unixuser.org>
