@@ -1,3 +1,8 @@
+2000-08-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+            Akihiro Arisawa  <ari@atesoft.advantest.co.jp>
+
+	* nnshimbun.el: Add `mew' and `xemacs' support.
+
 2000-08-17  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/dgnushack.el (dgnushack-texi-format): Require `ptexinfmt'
